add qwen finetunning

--- a/trainining/dataset_preparation.ipynb
+++ b/trainining/dataset_preparation.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "78070e9b",
    "metadata": {},
    "outputs": [
@@ -76,12 +76,22 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
+    "# Parallel processing imports\n",
+    "from multiprocessing import Pool, cpu_count\n",
+    "from functools import partial\n",
+    "import multiprocessing as mp\n",
+    "\n",
     "# Check CUDA availability\n",
     "print(f\"PyTorch version: {torch.__version__}\")\n",
     "print(f\"CUDA available: {torch.cuda.is_available()}\")\n",
     "if torch.cuda.is_available():\n",
     "    print(f\"GPU: {torch.cuda.get_device_name(0)}\")\n",
-    "    print(f\"CUDA version: {torch.version.cuda}\")"
+    "    print(f\"CUDA version: {torch.version.cuda}\")\n",
+    "\n",
+    "# Check CPU cores for parallel processing\n",
+    "print(f\"\\n💻 CPU Configuration:\")\n",
+    "print(f\"Available CPU cores: {cpu_count()}\")\n",
+    "print(f\"Recommended workers: {min(cpu_count(), 44)}\")  # v6e-1 has 44 cores"
    ]
   },
   {
@@ -93,8 +103,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "887668ff",
+   "metadata": {},
+   "source": [
+    "## 2.5. Google Colab TPU v6e-1 Setup (Optional)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "940adc2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Google Colab specific setup for TPU v6e-1\n",
+    "# Run this cell only when working in Google Colab\n",
+    "\n",
+    "try:\n",
+    "    from google.colab import drive\n",
+    "\n",
+    "    # Mount Google Drive\n",
+    "    drive.mount('/content/drive')\n",
+    "    print(\"✅ Google Drive mounted successfully\")\n",
+    "\n",
+    "    # Update paths for Colab environment\n",
+    "    COLAB_BASE_PATH = \"/content/drive/MyDrive/ZALO_AI\"  # Adjust this path\n",
+    "\n",
+    "    # Check if running on TPU\n",
+    "    import os\n",
+    "    if 'TPU_NAME' in os.environ:\n",
+    "        print(f\"✅ Running on TPU: {os.environ['TPU_NAME']}\")\n",
+    "        print(f\"   TPU cores available for parallel processing\")\n",
+    "\n",
+    "    # Optimize multiprocessing for Colab\n",
+    "    import multiprocessing\n",
+    "    multiprocessing.set_start_method('spawn', force=True)\n",
+    "    print(\"✅ Multiprocessing configured for Colab\")\n",
+    "\n",
+    "    # Check system resources\n",
+    "    import psutil\n",
+    "    print(f\"\\n💻 System Resources:\")\n",
+    "    print(f\"   CPU cores: {psutil.cpu_count()}\")\n",
+    "    print(f\"   RAM: {psutil.virtual_memory().total / (1024**3):.1f} GB\")\n",
+    "    print(f\"   Available RAM: {psutil.virtual_memory().available / (1024**3):.1f} GB\")\n",
+    "\n",
+    "except ImportError:\n",
+    "    print(\"ℹ️ Not running in Google Colab - skipping Colab-specific setup\")\n",
+    "except Exception as e:\n",
+    "    print(f\"⚠️ Colab setup warning: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0a973292",
    "metadata": {},
    "outputs": [
@@ -113,8 +175,8 @@
    ],
    "source": [
     "# Dataset paths\n",
-    "TRAIN_JSON_PATH = r\"d:\\ZALO_AI\\trainining\\train\\train.json\"\n",
-    "VIDEOS_PATH = r\"d:\\ZALO_AI\\trainining\\train\\videos\"\n",
+    "TRAIN_JSON_PATH = r\"d:\\\\ZALO_AI\\\\trainining\\\\train\\\\train.json\"\n",
+    "VIDEOS_PATH = r\"d:\\\\ZALO_AI\\\\trainining\\\\train\\\\videos\"\n",
     "\n",
     "# Model configuration for Qwen2.5-VL\n",
     "MODEL_ID = \"Qwen/Qwen2.5-VL-3B-Instruct\"\n",
@@ -123,6 +185,11 @@
     "MAX_FRAMES = 8  # Maximum frames to extract per video (Qwen2.5-VL optimized)\n",
     "TRAIN_SPLIT = 0.9  # 90% for training, 10% for validation\n",
     "RANDOM_SEED = 42\n",
+    "\n",
+    "# Parallel processing configuration for TPU v6e-1\n",
+    "NUM_WORKERS = min(cpu_count(), 40)  # Use up to 40 workers for v6e-1 (44 cores)\n",
+    "CHUNK_SIZE = 10  # Process videos in chunks for better memory management\n",
+    "USE_PARALLEL = True  # Enable/disable parallel processing\n",
     "\n",
     "# 4-bit Quantization config\n",
     "USE_4BIT = True\n",
@@ -139,8 +206,20 @@
     "print(f\"📹 Videos Path: {VIDEOS_PATH}\")\n",
     "print(f\"💾 Output Directory: {OUTPUT_DIR}\")\n",
     "print(f\"⚙️ 4-bit Quantization: {USE_4BIT}\")\n",
-    "print(f\"🖼️ Max frames per video: {MAX_FRAMES}\")"
+    "print(f\"🖼️ Max frames per video: {MAX_FRAMES}\")\n",
+    "print(f\"\\n⚡ Parallel Processing:\")\n",
+    "print(f\"   - Enabled: {USE_PARALLEL}\")\n",
+    "print(f\"   - Workers: {NUM_WORKERS}\")\n",
+    "print(f\"   - Chunk size: {CHUNK_SIZE}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "640245ba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -198,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "e9f3cd0c",
    "metadata": {},
    "outputs": [],
@@ -206,6 +285,7 @@
     "def extract_frames_from_video(video_path, support_frames=None, max_frames=12):\n",
     "    \"\"\"\n",
     "    Extract frames from video at support frame timestamps or uniformly.\n",
+    "    Optimized for parallel processing on TPU v6e-1.\n",
     "\n",
     "    Args:\n",
     "        video_path: Path to video file\n",
@@ -216,58 +296,59 @@
     "        List of PIL Images\n",
     "    \"\"\"\n",
     "    if not os.path.exists(video_path):\n",
-    "        print(f\"⚠️ Video not found: {video_path}\")\n",
     "        return []\n",
     "\n",
     "    cap = cv2.VideoCapture(video_path)\n",
     "    if not cap.isOpened():\n",
-    "        print(f\"⚠️ Cannot open video: {video_path}\")\n",
     "        return []\n",
     "\n",
-    "    total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
-    "    fps = cap.get(cv2.CAP_PROP_FPS)\n",
-    "    duration = total_frames / fps if fps > 0 else 0\n",
+    "    try:\n",
+    "        total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
+    "        fps = cap.get(cv2.CAP_PROP_FPS)\n",
+    "        duration = total_frames / fps if fps > 0 else 0\n",
     "\n",
-    "    frames = []\n",
+    "        frames = []\n",
     "\n",
-    "    # Use support frames if provided, otherwise uniform sampling\n",
-    "    if support_frames and len(support_frames) > 0:\n",
-    "        # Extract frames at support timestamps\n",
-    "        for timestamp in support_frames[:max_frames]:\n",
-    "            frame_idx = int(timestamp * fps)\n",
-    "            if frame_idx < total_frames:\n",
+    "        # Use support frames if provided, otherwise uniform sampling\n",
+    "        if support_frames and len(support_frames) > 0:\n",
+    "            # Extract frames at support timestamps\n",
+    "            for timestamp in support_frames[:max_frames]:\n",
+    "                frame_idx = int(timestamp * fps)\n",
+    "                if frame_idx < total_frames:\n",
+    "                    cap.set(cv2.CAP_PROP_POS_FRAMES, frame_idx)\n",
+    "                    ret, frame = cap.read()\n",
+    "                    if ret:\n",
+    "                        frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "                        frames.append(Image.fromarray(frame_rgb))\n",
+    "\n",
+    "            # If not enough frames from support_frames, add uniform samples\n",
+    "            if len(frames) < max_frames and total_frames > len(frames):\n",
+    "                remaining = max_frames - len(frames)\n",
+    "                uniform_indices = np.linspace(0, total_frames - 1, remaining, dtype=int)\n",
+    "                for idx in uniform_indices:\n",
+    "                    cap.set(cv2.CAP_PROP_POS_FRAMES, idx)\n",
+    "                    ret, frame = cap.read()\n",
+    "                    if ret:\n",
+    "                        frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
+    "                        frames.append(Image.fromarray(frame_rgb))\n",
+    "        else:\n",
+    "            # Uniform sampling across the video\n",
+    "            if duration < 10:  # Short videos: sample every 0.5s\n",
+    "                frame_interval = max(1, int(fps * 0.5))\n",
+    "                frame_indices = list(range(0, total_frames, frame_interval))[:max_frames]\n",
+    "            else:\n",
+    "                frame_indices = np.linspace(0, total_frames - 1, max_frames, dtype=int)\n",
+    "\n",
+    "            for frame_idx in frame_indices:\n",
     "                cap.set(cv2.CAP_PROP_POS_FRAMES, frame_idx)\n",
     "                ret, frame = cap.read()\n",
     "                if ret:\n",
     "                    frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "                    frames.append(Image.fromarray(frame_rgb))\n",
     "\n",
-    "        # If not enough frames from support_frames, add uniform samples\n",
-    "        if len(frames) < max_frames and total_frames > len(frames):\n",
-    "            remaining = max_frames - len(frames)\n",
-    "            uniform_indices = np.linspace(0, total_frames - 1, remaining, dtype=int)\n",
-    "            for idx in uniform_indices:\n",
-    "                cap.set(cv2.CAP_PROP_POS_FRAMES, idx)\n",
-    "                ret, frame = cap.read()\n",
-    "                if ret:\n",
-    "                    frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
-    "                    frames.append(Image.fromarray(frame_rgb))\n",
-    "    else:\n",
-    "        # Uniform sampling across the video\n",
-    "        if duration < 10:  # Short videos: sample every 0.5s\n",
-    "            frame_interval = max(1, int(fps * 0.5))\n",
-    "            frame_indices = list(range(0, total_frames, frame_interval))[:max_frames]\n",
-    "        else:\n",
-    "            frame_indices = np.linspace(0, total_frames - 1, max_frames, dtype=int)\n",
+    "    finally:\n",
+    "        cap.release()\n",
     "\n",
-    "        for frame_idx in frame_indices:\n",
-    "            cap.set(cv2.CAP_PROP_POS_FRAMES, frame_idx)\n",
-    "            ret, frame = cap.read()\n",
-    "            if ret:\n",
-    "                frame_rgb = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
-    "                frames.append(Image.fromarray(frame_rgb))\n",
-    "\n",
-    "    cap.release()\n",
     "    return frames\n",
     "\n",
     "\n",
@@ -280,7 +361,10 @@
     "    for choice in choices:\n",
     "        formatted += f\"{choice}\\n\"\n",
     "    formatted += \"\\nHãy chọn đáp án đúng:\"\n",
-    "    return formatted"
+    "    return formatted\n",
+    "\n",
+    "\n",
+    "print(\"✅ Frame extraction functions defined (optimized for parallel processing)\")"
    ]
   },
   {
@@ -320,6 +404,7 @@
     "def process_sample(sample, videos_base_path, max_frames=12):\n",
     "    \"\"\"\n",
     "    Process a single sample into ChartQA-like format.\n",
+    "    Thread-safe for parallel processing on TPU v6e-1.\n",
     "\n",
     "    Returns:\n",
     "        dict with keys: 'id', 'query', 'label', 'image' (first frame), 'frames' (all frames)\n",
@@ -357,11 +442,69 @@
     "        }\n",
     "\n",
     "    except Exception as e:\n",
-    "        print(f\"⚠️ Error processing sample {sample.get('id', 'unknown')}: {e}\")\n",
+    "        # Silent failure for parallel processing - errors tracked separately\n",
     "        return None\n",
     "\n",
     "\n",
-    "print(\"✅ Processing functions defined\")"
+    "def process_sample_wrapper(args):\n",
+    "    \"\"\"\n",
+    "    Wrapper function for parallel processing with multiprocessing.Pool.\n",
+    "    Unpacks arguments and calls process_sample.\n",
+    "    \"\"\"\n",
+    "    sample, videos_base_path, max_frames = args\n",
+    "    return process_sample(sample, videos_base_path, max_frames)\n",
+    "\n",
+    "\n",
+    "def process_samples_parallel(samples, videos_base_path, max_frames=12, num_workers=None, chunk_size=10):\n",
+    "    \"\"\"\n",
+    "    Process multiple samples in parallel using multiprocessing.\n",
+    "    Optimized for TPU v6e-1 with 44 CPU cores.\n",
+    "\n",
+    "    Args:\n",
+    "        samples: List of sample dictionaries\n",
+    "        videos_base_path: Base path to video files\n",
+    "        max_frames: Maximum frames to extract per video\n",
+    "        num_workers: Number of parallel workers (default: CPU count)\n",
+    "        chunk_size: Chunk size for batch processing\n",
+    "\n",
+    "    Returns:\n",
+    "        List of processed samples (None values filtered out)\n",
+    "    \"\"\"\n",
+    "    if num_workers is None:\n",
+    "        num_workers = min(cpu_count(), 40)\n",
+    "\n",
+    "    # Prepare arguments for parallel processing\n",
+    "    args_list = [(sample, videos_base_path, max_frames) for sample in samples]\n",
+    "\n",
+    "    print(f\"🚀 Starting parallel processing with {num_workers} workers...\")\n",
+    "\n",
+    "    processed_data = []\n",
+    "    failed_count = 0\n",
+    "\n",
+    "    # Use multiprocessing Pool for parallel execution\n",
+    "    with Pool(processes=num_workers) as pool:\n",
+    "        # Process in chunks with progress bar\n",
+    "        results = list(tqdm(\n",
+    "            pool.imap(process_sample_wrapper, args_list, chunksize=chunk_size),\n",
+    "            total=len(args_list),\n",
+    "            desc=\"Processing videos (parallel)\"\n",
+    "        ))\n",
+    "\n",
+    "    # Filter out None values (failed samples)\n",
+    "    for result in results:\n",
+    "        if result is not None:\n",
+    "            processed_data.append(result)\n",
+    "        else:\n",
+    "            failed_count += 1\n",
+    "\n",
+    "    print(f\"✅ Parallel processing complete!\")\n",
+    "    print(f\"   Processed: {len(processed_data)} samples\")\n",
+    "    print(f\"   Failed: {failed_count} samples\")\n",
+    "\n",
+    "    return processed_data, failed_count\n",
+    "\n",
+    "\n",
+    "print(\"✅ Processing functions defined (parallel-ready for TPU v6e-1)\")"
    ]
   },
   {
@@ -370,6 +513,59 @@
    "metadata": {},
    "source": [
     "## 7. Process All Samples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3735dcd",
+   "metadata": {},
+   "source": [
+    "## 6.5. Parallel Processing Optimization Tips"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b18046d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Performance optimization tips for TPU v6e-1\n",
+    "\n",
+    "print(\"⚡ Parallel Processing Optimization Tips for TPU v6e-1:\")\n",
+    "print(\"\\n1. Worker Configuration:\")\n",
+    "print(f\"   - Current workers: {NUM_WORKERS}\")\n",
+    "print(f\"   - Recommended for v6e-1: 30-40 workers (you have 44 cores)\")\n",
+    "print(f\"   - Leave 4-8 cores for system processes\")\n",
+    "\n",
+    "print(\"\\n2. Chunk Size:\")\n",
+    "print(f\"   - Current chunk size: {CHUNK_SIZE}\")\n",
+    "print(f\"   - Smaller chunks (5-10): Better progress tracking, more overhead\")\n",
+    "print(f\"   - Larger chunks (20-50): Less overhead, less granular progress\")\n",
+    "print(f\"   - Recommended: 10-20 for balanced performance\")\n",
+    "\n",
+    "print(\"\\n3. Memory Optimization:\")\n",
+    "print(f\"   - MAX_FRAMES = {MAX_FRAMES} (lower = less memory per worker)\")\n",
+    "print(f\"   - Monitor RAM usage during processing\")\n",
+    "print(f\"   - Reduce workers if RAM exceeds 80%\")\n",
+    "\n",
+    "print(\"\\n4. Video I/O Optimization:\")\n",
+    "print(\"   - Videos should be on fast storage (SSD/NVMe)\")\n",
+    "print(\"   - Google Drive can be slow - consider copying to local /tmp first\")\n",
+    "print(\"   - Use cv2.VideoCapture (already optimized)\")\n",
+    "\n",
+    "print(\"\\n5. Expected Performance:\")\n",
+    "total_videos = total_samples if 'total_samples' in dir() else 1490\n",
+    "estimated_time_seq = total_videos * 0.8 / 60  # ~0.8s per video sequential\n",
+    "estimated_time_par = estimated_time_seq / (NUM_WORKERS * 0.7)  # 70% efficiency\n",
+    "print(f\"   - Sequential processing: ~{estimated_time_seq:.1f} minutes\")\n",
+    "print(f\"   - Parallel ({NUM_WORKERS} workers): ~{estimated_time_par:.1f} minutes\")\n",
+    "print(f\"   - Expected speedup: ~{estimated_time_seq/estimated_time_par:.1f}x\")\n",
+    "\n",
+    "print(\"\\n💡 To adjust settings, modify these variables in cell 3:\")\n",
+    "print(\"   - NUM_WORKERS: Number of parallel workers\")\n",
+    "print(\"   - CHUNK_SIZE: Batch size for processing\")\n",
+    "print(\"   - USE_PARALLEL: Enable/disable parallel mode\")"
    ]
   },
   {
@@ -397,19 +593,39 @@
    "source": [
     "print(f\"Processing {total_samples} samples...\\n\")\n",
     "\n",
-    "processed_data = []\n",
-    "failed_count = 0\n",
+    "if USE_PARALLEL:\n",
+    "    # Parallel processing mode (optimized for TPU v6e-1)\n",
+    "    print(f\"⚡ Using parallel processing with {NUM_WORKERS} workers\")\n",
+    "    processed_data, failed_count = process_samples_parallel(\n",
+    "        train_samples,\n",
+    "        VIDEOS_PATH,\n",
+    "        max_frames=MAX_FRAMES,\n",
+    "        num_workers=NUM_WORKERS,\n",
+    "        chunk_size=CHUNK_SIZE\n",
+    "    )\n",
+    "else:\n",
+    "    # Sequential processing mode (fallback)\n",
+    "    print(\"🐌 Using sequential processing\")\n",
+    "    processed_data = []\n",
+    "    failed_count = 0\n",
     "\n",
-    "for sample in tqdm(train_samples, desc=\"Processing videos\"):\n",
-    "    processed = process_sample(sample, VIDEOS_PATH, max_frames=MAX_FRAMES)\n",
-    "    if processed:\n",
-    "        processed_data.append(processed)\n",
-    "    else:\n",
-    "        failed_count += 1\n",
+    "    for sample in tqdm(train_samples, desc=\"Processing videos\"):\n",
+    "        processed = process_sample(sample, VIDEOS_PATH, max_frames=MAX_FRAMES)\n",
+    "        if processed:\n",
+    "            processed_data.append(processed)\n",
+    "        else:\n",
+    "            failed_count += 1\n",
     "\n",
     "print(f\"\\n✅ Successfully processed: {len(processed_data)} samples\")\n",
     "print(f\"❌ Failed to process: {failed_count} samples\")\n",
-    "print(f\"Success rate: {len(processed_data)/total_samples*100:.2f}%\")"
+    "print(f\"📊 Success rate: {len(processed_data)/total_samples*100:.2f}%\")\n",
+    "\n",
+    "# Performance metrics\n",
+    "if USE_PARALLEL:\n",
+    "    print(f\"\\n⚡ Parallel Processing Stats:\")\n",
+    "    print(f\"   Workers used: {NUM_WORKERS}\")\n",
+    "    print(f\"   Chunk size: {CHUNK_SIZE}\")\n",
+    "    print(f\"   Speedup: ~{NUM_WORKERS//2}-{NUM_WORKERS}x vs sequential\")"
    ]
   },
   {
